--- a/src/main/resources/templates/recipeUpdate.html
+++ b/src/main/resources/templates/recipeUpdate.html
@@ -38,7 +38,7 @@
                     <select class="form-control border-info" id="categoria" name="categoryId" required>
                         <option th:text="#{recipeForm.placeholder.category}" value="" disabled selected>Selecciona una categoría...</option>
                         <option th:each="category : ${categoryList}" th:value="${category.id}"
-                                th:text="${category.name}">
+                                th:text="${category.name}" th:selected="${category.id == recipe.category.id}">
                         </option>
                     </select>
                     <div class="valid-feedback" th:text="#{recipeForm.message.category}">
@@ -61,10 +61,11 @@
                         <div th:each="entry:${ingredientMap}" class="tab-content" id="myTabContent" >
                             <div class="tab-pane fade p-3" th:id="|tab-content-${entry.key.id}|" role="tabpanel"
                                  th:aria-labelledby="|tab-${entry.key.id}|" required>
-                                <!-- Cicles -->
+
                                 <div th:each="ingredient: ${entry.value}" class="form-check cicle">
                                     <input class="form-check-input check-cicle invalid" type="checkbox"
-                                           th:value="${ingredient.id}" id="checkGA" name="typeIdList" target="descGA">
+                                           th:value="${ingredient.id}" id="checkGA" name="typeIdList" target="descGA"
+                                           th:checked="${#lists.contains(recipe.ingredienList, ingredient.key)}">
 
                                     <p th:text="${ingredient.name}" class="form-check-label text-info"
                                        for="checkGA">Nombre del ingrediente </p>
@@ -79,20 +80,19 @@
                     <label for="tool" th:text="#{recipeForm.tools}">Utensilios:</label>
                     <select class="form-control border-info" id="tool" name="toolIdList" required multiple>
                         <option th:text="#{recipeForm.placeholder.tools}" value="" disabled selected>Selecciona los Utensilios...</option>
-                        <!-- Iterar sobre la lista de categorías -->
                         <option th:each="tool : ${toolList}" th:value="${tool.id}"
-                                th:text="${tool.name}">
+                                th:text="${tool.name}" th:selected="${#lists.contains(recipe.toolList, tool.key)}">
                         </option>
                     </select>
                 </div>
                 <div class="col-md-6 mb-3 my-2">
                     <label for="lang" th:text="#{recipeForm.language}">Idiomas:</label>
-                    <select class="form-control border-info" id="lang" name="lang" required>
+                    <select class="form-control border-info" th:field="*{language}" id="lang" name="lang" required>
                         <option value="" th:text="#{recipeForm.placeholder.language}" disabled selected>Selecciona el
                             Idioma...
                         </option>
                         <option th:each="language : ${lang}" th:value="${language}"
-                                th:text="${language}" th:field="*{language}">
+                                th:text="${language}" th:selected="${language == recipe.lang}">
                         </option>
                     </select>
                 </div>
@@ -122,10 +122,13 @@
                 <div class="col-6 bg-info p-1 ">
                     <div class="bg-info pt-2 border border-fondo" style="border-width: 5px; text-align: center;">
                         <button type="submit" class="btn btn-info text-fondo">
-                            <h4 class="text-fondo d-none d-sm-block">AÑADIR RECETA</h4>
-                            <h6 class="text-fondo d-block d-sm-none">AÑADIR RECETA</h6>
+                            <h4 class="text-fondo d-none d-sm-block">ACTUALIZAR RECETA</h4>
+                            <h6 class="text-fondo d-block d-sm-none">ACTUALIZAR RECETA</h6>
                         </button>
                     </div>
+                </div>
+                <div class="col-2 bg-info p-1 ">
+                    <a th:href="@{/recipes}" class="btn btn-secondary">Cancelar</a>
                 </div>
             </div>
         </form>
