--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -88,18 +88,94 @@
                 <div class="row justify-content-center">
                     <div class="col-10 bg-info justify-content-center p-1">
                         <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
-                            <a href="/recipes/add">
-                                <h6 class="text-fondo justify-content-center pt-1 " th:text="#{menu.login}">Log in</h6>
+                            <a href="/nutritionists/add">
+                                <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
                             </a>
+                            <!--<button type="button" data-bs-toggle="modal" data-bs-target="#loginModal">
+                                <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
+                            </button> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <!-- <hr class="header border border-fuente">-->
+    <!-- <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <form class="m-2 g-3 was-validated" th:action="@{/nutritionists/1}" th:object="${user}" method="post" novalidate>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="name" class="form-label">Nombre</label>
+                        <input type="text" class="form-control border-info" id="name"
+                            placeholder="Nombre" th:field="*{name}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="username" class="form-label">Nombre de Usuario</label>
+                        <input type="text" class="form-control border-info" id="username"
+                            placeholder="Nombre de Usuario" th:field="*{username}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="surname1" class="form-label">Apellido 1</label>
+                        <input type="text" class="form-control border-info" id="surname1"
+                            placeholder="Apellido 1" th:field="*{surname1}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="surname2" class="form-label">Apellido 2</label>
+                        <input type="text" class="form-control border-info" id="surname2"
+                            placeholder="Apellido 2" th:field="*{surname2}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-8 my-2">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control border-info" id="email"
+                            placeholder="ejemplo@correo.com" th:field="*{email}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control border-info" id="password"
+                            placeholder="Password" th:field="*{password}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <label for="birthDate" class="form-label">Fecha de Nacimiento</label>
+                        <input type="date" class="form-control border-info" id="birthDate"
+                            placeholder="dd/mm/aaaa" th:field="*{birthDate}" required>
+                        <div class="valid-feedback">Looks good!</div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-8 my-2">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input border-info" id="nutritionist">
+                            <label for="nutritionist" class="form-check-label text-info">¿Eres un nutricionista?</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center m-2 my-2">
+                    <div class="col-12 col-md-6 col-lg-4 bg-info p-1">
+                        <div class="col-12 bg-info pt-2 border border-fondo text-center bw-5">
+                            <button type="submit" class="btn btn-info text-fondo">INICIAR SESIÓN</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            </div>
+          </div>
+        </div>
+    </div> -->
 </header>
 <br>
 
