Add application prod and dev

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -39,7 +39,7 @@
                         <div class="collapse navbar-collapse " id="navbarNavDropdown">
                             <ul class="navbar d-xs-block">
                                 <li class="nav-item border-top border-fuente"><a
-                                        th:href="@{'/home' + '?lang=' + ${#locale.language}}"
+                                        th:href="@{'/' + '?lang=' + ${#locale.language}}"
                                         class="nav-link active" th:text="#{menu.home}">INICIO</a></li>
 
                                 <li class="nav-item border-top border-fuente"><a
