--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -52,14 +52,14 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 my-2">
                         <label  th:text="|#{userForm.birthdate}|" for="birthDate" class="form-label">Fecha de Nacimiento</label>
-                        <input type="date" class="form-control border-info" id="birthDate"
+                        <input type="text" class="form-control border-info" id="birthDate"
                           th:field="*{birthDate}" required>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-8 my-2">
                         <div class="form-check">
-                            <input type="checkbox" class="form-check-input border-info" id="nutritionist">
+                            <input type="checkbox" class="form-check-input border-info" id="nutritionist" th:field="*{nutritionist}">
                             <label th:text="|#{userForm.nutritionist}|"  for="nutritionist" class="form-check-label text-info">¿Eres un nutricionista?</label>
                         </div>
                     </div>
