--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -16,7 +16,8 @@
 <div class="container-fluid">
     <main class="content">
         <section class="container-lg border-bottom border-fuente text-center py-4">
-            <h2 class="text-info" th:if="${nutritionist.id == 1}" th:text="#{profile.section}">MI PERFIL</h2>
+            <h2 class="text-info" th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}"
+                th:text="#{profile.section}">MI PERFIL</h2>
             <div class="row align-items-stretch bg-resalte m-3 p-3">
                 <div class="d-none d-md-block col-md-5 bg-fondo">
                     <img class="profile-picture" th:src="@{/images/user/}+user_+${nutritionist.id}+.png"
@@ -79,7 +80,7 @@
                             <a th:href="@{${'/recipes/' + recipe.id}}">
                                 <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
                             </a>
-                            <div class="bg-resalte p-1" th:if="${nutritionist.id == 1}">
+                            <div class="bg-resalte p-1" th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}">
                                 <div class=" pt-2 border border-fondo bw-5 bg-resalte ">
                                     <a th:href="@{${'/recipes/edit/'+recipe.id}}">
                                         <h5 class="text-fondo" th:text="#{profile.user.buttom.edit}">EDITAR</h5>
@@ -89,7 +90,8 @@
                     </div>
                 </div>
                 <!--boton para añadir nueva receta-->
-                <div class="row justify-content-center my-3" th:if="${nutritionist.id == 1}">
+                <div class="row justify-content-center my-3"
+                     th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}">
                     <div class="col-8 bg-info p-1">
                         <div class="col-12 bg-info py-2 border border-fondo bw-5">
                             <a href="/recipes/add">
