Fix insertions in bbdd and programming

--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -92,7 +92,7 @@
                             Idioma...
                         </option>
                         <option th:each="language : ${lang}" th:value="${language}"
-                                th:text="${language}" th:field="*{language}">
+                                th:text="${language}">
                         </option>
                     </select>
                 </div>
