--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -64,7 +64,7 @@
                                     </ul>
                                 </li>
                                 <li th:if="${@authService.getCurrentUserId() != null}" class="nav-item border-top border-fuente"><a
-                                        th:href="@{'/nutritionists/'+${@authService.getCurrentUserId()} + '?lang=' + ${#locale.language}}"
+                                        th:href="@{'/users/id/'+${@authService.getCurrentUserId()} + '?lang=' + ${#locale.language}}"
                                         class="nav-link active" th:text="#{menu.profile}">PERFIL</a></li>
                             </ul>
                         </div>
@@ -88,7 +88,7 @@
                 <div class="row justify-content-center">
                     <div class="col-10 bg-info justify-content-center p-1">
                         <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
-                            <a href="/nutritionists/add">
+                            <a href="/users/login/add">
                                 <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
                             </a>
                             <!--<button type="button" data-bs-toggle="modal" data-bs-target="#loginModal">
