--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,8 +12,8 @@
 <body>
 <header th:fragment="header">
     <div class=" container-fluid text-center border-fuente bg-resalte">
-        <div class="row justify-content-between text-center">
-            <div class="col-12 col-sm-4 col-md-3 d-inline-block align-top">
+        <div class="row justify-content-between text-center m-0 p-0">
+            <div class="col-12 col-sm-4 col-md-4 d-inline-block align-top">
                 <div class="container-logo d-inline-block align-top pt-3">
                     <img th:src="@{/images/logo/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
                 </div>
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-sm-4 col-md-6">
+            <div class="col-12 col-sm-4 col-md-4">
                 <nav class="navbar-expand-md navbar-light  d-inline-block">
                     <div class=" mt-3">
                         <button class="navbar-toggler border-info" type="button" data-bs-toggle="collapse"
@@ -38,32 +38,34 @@
                         </button>
                         <div class="collapse navbar-collapse " id="navbarNavDropdown">
                             <ul class="navbar d-xs-block">
-                                <li class="nav-item border-top border-fuente"><a
+                                <li class="nav-item border-top border-fuente mr-2"><a
                                         th:href="@{'/' + '?lang=' + ${#locale.language}}"
                                         class="nav-link active" th:text="#{menu.home}">INICIO</a></li>
-
-                                <li class="nav-item border-top border-fuente"><a
-                                        th:href="@{'/recipes' + '?lang=' + ${#locale.language}}"
-                                        class="nav-link active" th:text="#{menu.recipes}">RECETAS</a></li>
-                                <li class="nav-item dropdown">
+                                <li class="nav-item dropdown ml-2">
                                     <a class="nav-link dropdown-toggle border-top border-fuente"
                                        th:href="@{'/categories' + '?lang=' + ${#locale.language}}"
                                        role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                                       th:text="#{menu.categories}">
-                                        CATEGORIAS
+                                       th:text="#{menu.recipes}">
+                                        Recetas
                                     </a>
                                     <ul class="dropdown-menu bg-fondo">
-                                        <li><a class="dropdown-item" href="/recipes" th:text="#{menu.dropdown1}">Todo</a></li>
+                                        <li><a class="dropdown-item" href="/recipes"
+                                               th:text="#{menu.dropdown1}">Todo</a></li>
                                         <li>
                                             <hr class="dropdown-divider bg-fuente">
                                         </li>
-                                        <li><a class="dropdown-item" href="/categories/1/recipes" th:text="#{menu.dropdown2}">Salado</a></li>
-                                        <li><a class="dropdown-item" href="/categories/2/recipes" th:text="#{menu.dropdown3}">Postre</a></li>
-                                        <li><a class="dropdown-item" href="/categories/3/recipes" th:text="#{menu.dropdown4}">Bebida</a></li>
-                                        <li><a class="dropdown-item" href="/categories/4/recipes" th:text="#{menu.dropdown5}">Snack</a></li>
+                                        <li><a class="dropdown-item" href="/categories/1/recipes"
+                                               th:text="#{menu.dropdown2}">Salado</a></li>
+                                        <li><a class="dropdown-item" href="/categories/2/recipes"
+                                               th:text="#{menu.dropdown3}">Postre</a></li>
+                                        <li><a class="dropdown-item" href="/categories/3/recipes"
+                                               th:text="#{menu.dropdown4}">Bebida</a></li>
+                                        <li><a class="dropdown-item" href="/categories/4/recipes"
+                                               th:text="#{menu.dropdown5}">Snack</a></li>
                                     </ul>
                                 </li>
-                                <li th:if="${@authService.getCurrentUserId() != null}" class="nav-item border-top border-fuente"><a
+                                <li th:if="${@authService.getCurrentUserId() != null}"
+                                    class="nav-item border-top border-fuente"><a
                                         th:href="@{'/users/'+${@authService.getCurrentUserId()} + '?lang=' + ${#locale.language}}"
                                         class="nav-link active" th:text="#{menu.profile}">PERFIL</a></li>
                             </ul>
@@ -84,16 +86,34 @@
                     </a>
                 </div>
             </div>
-            <div class="col-8 col-sm-3 col-md-2 d-inline rounded mt-4 mb-2">
-                <div class="row justify-content-center">
-                    <div class="col-10 bg-info justify-content-center p-1">
-                        <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
-                            <a href="/users/login/add">
-                                <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
-                            </a>
-                            <!--<button type="button" data-bs-toggle="modal" data-bs-target="#loginModal">
-                                <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
-                            </button> -->
+            <div class="col-8 col-sm-3 col-md-3 d-inline rounded mt-4 mb-2">
+                <div class="row m-0 p-0">
+                    <div class="col-12 col-sm p-0 mb-2">
+                        <div th:if="${@authService.getCurrentUserId() == null}"
+                             class="col-11 bg-info justify-content-center p-1">
+                            <div class="justify-content-center text-center bg-info border border-fondo bw-1">
+                                <a href="/users/login/add">
+                                    <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
+                                </a>
+                            </div>
+                        </div>
+                        <div th:if="${@authService.getCurrentUserId() != null}"
+                             class="col-11 bg-info justify-content-center p-1">
+                            <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
+                                <a href="/users/login/add">
+                                    <h6 class="text-fondo justify-content-center pt-1 ">Log out</h6>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div th:if="${@authService.getCurrentUserId() == null}" class="col-12 col-sm p-0 m-0">
+                        <div
+                             class="col-11 bg-info justify-content-center p-1">
+                            <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
+                                <a href="/users/add">
+                                    <h6 class="text-fondo justify-content-center pt-1 ">Sign up</h6>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
