--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -2,36 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Forum&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Forum&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-/*$font_title: Forum;
-$font_body: Playfair Display;
-$font-weight-bold: 580;
-$bg_color: #D0EEF4;
-$font_color: #000000;
-$highlight_color: #F1856A;
-$title_color: #006272;
-$theme-colors: (
-  "primary": $font_color,
-  "secondary": $bg_color,
-  "warning": $highlight_color,
-  "info": $title_color
-);
-$base_size: 1.2rem;
-$title_size: $base_size*3.5;
-$title_normal: $base_size*1.5;
-$subtitle_size: $base_size*2.5;
-$info: $base_size*1;*/
-/*
-$grid-breakpoints: (
-  //tablets y moviles, logo pequeño desplegable y boton
-  xs: 315px,
-  sm: 425px,
-  //tamaño portatil mediano, quitar nombre y slogan con navbar y boton
-  md: 768px,
-  lg: 1024px,
-  // tamaño pantallas grandes, logo,nombre,slogan navbar y boton
-  xl: 1200px,
-  xxl: 1440px
-); */
 .dropdown-menu .form-check {
   padding: 5px;
 }
@@ -90,6 +60,10 @@ html {
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+@-ms-viewport {
+  width: device-width;
+}
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
@@ -128,8 +102,7 @@ p {
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
 }
@@ -1716,10 +1689,6 @@ pre code {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
-.form-control::-moz-placeholder {
-  color: #6c757d;
-  opacity: 1;
-}
 .form-control::placeholder {
   color: #6c757d;
   opacity: 1;
@@ -2113,9 +2082,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -3261,9 +3228,7 @@ tbody.collapse.show {
   height: 1rem;
   pointer-events: none;
   content: "";
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
   background-color: #dee2e6;
 }
 .custom-control-label::after {
@@ -3326,9 +3291,7 @@ tbody.collapse.show {
   background-size: 8px 10px;
   border: 1px solid #ced4da;
   border-radius: 1.5rem;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
 }
 .custom-select:focus {
   border-color: #80bdff;
@@ -4070,10 +4033,8 @@ tbody.collapse.show {
 }
 @media (min-width: 576px) {
   .card-columns {
-    -moz-column-count: 3;
-         column-count: 3;
-    -moz-column-gap: 1.25rem;
-         column-gap: 1.25rem;
+    column-count: 3;
+    column-gap: 1.25rem;
   }
   .card-columns .card {
     display: inline-block;
@@ -6424,8 +6385,7 @@ button.bg-resalte:focus {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
+  clip-path: inset(50%);
   border: 0;
 }
 
@@ -6436,8 +6396,7 @@ button.bg-resalte:focus {
   overflow: visible;
   clip: auto;
   white-space: normal;
-  -webkit-clip-path: none;
-          clip-path: none;
+  clip-path: none;
 }
 
 .w-25 {
@@ -8076,22 +8035,6 @@ ul {
   list-style: none;
 }
 
-/*
-.i8-dropdown__content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.i8-dropdown__wrap.open .i8-dropdown__content {
-  display: block;
-}
-
-.i8-dropdown__label {
-  cursor: pointer;
-}*/
 .content {
   flex: 1;
 }
@@ -8116,7 +8059,7 @@ ul {
 }
 
 .nutrifusion-food-welcome {
-  height: 4rem;
+  height: 3.8rem;
 }
 
 .heart-icon,
@@ -8176,6 +8119,11 @@ ul {
   width: 100%;
 }
 
+.user-picture img {
+  height: 200px;
+  width: 100%;
+}
+
 .profile-picture {
   max-height: 55vh;
   width: 90%;
@@ -8186,55 +8134,6 @@ ul {
   width: 100%;
 }
 
-/*.welcome-text, .title-categories{
-  font-size: $title_size;
-}
-
-.categories-text, .aboutus-text{
-  font-size: $subtitle_size;
-}
-
-.heart-icon, .message,
-.title-recipe, .title-drink,
-.title-maindish, .title-desserts,
-.title-snacks, .globe-icon,
-.NFF-title{
-  font-size: $title_normal;
-}
-
-.description-aboutus, .recipe-all-data{
-  font-size: $info;
-}
-.categories-text, .title-categories,
-.recipe-name{
-  font-style: italic;
-}
-
-.welcome-text, .categories-text,
-.aboutus-text, .title-categories,
-.recipe-category-name, .recipe-all-data{
-  font-family: $font_title;
-}
-
-.message, .title-recipe,
-.title-drink, .title-maindish, 
-.title-desserts, .title-snacks,
-.description-aboutus{
-  font-family: $font_body;
-}
-.img-aboutus{
-  width: 40vw;
-}
-
-.recipe-picture,.recipe-data{
-  flex: 1;
-}
-
-.recipe-picture img {
-  height: 400px;
-  width: 100%;
-}
-*/
 h1 {
   font-weight: 400;
   font-size: 3.5rem;
