--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -67,7 +67,11 @@
                 </div>
                 <div class="recipe-steps py-3 mx-5">
                     <h2 th:text="#{recipeDetail.preparation}">Preparación</h2>
-                    <p class="text-info" th:text="${recipe.steps}"></p>
+                    <div th:each="step:${recipe.steps}">
+                        <h3 class="text-info" th:text="#{recipeDetail.step} + ${step.id}"></h3>
+                        <p class="text-info" th:text="${step.description}"></p>
+                    </div>
+
                 </div>
             </section>
             <form th:if="${recipe.user.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}"
