--- a/src/main/resources/templates/profileNutritionist.html
+++ b/src/main/resources/templates/profileNutritionist.html
@@ -67,7 +67,18 @@
         </section>
         <section class="container-lg border-bottom border-fuente text-center py-4">
             <h2 class="text-info" th:text="#{profile.user.favourite.recipe}">RECETAS FAVORITAS</h2>
-            <!-- Falta añadir el listado de recetas favoritas  -->
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-xl-4 p-2" th:each="recipe :${favorites}">
+                        <img class="recipe-profile pb-3 rounded "
+                             th:src="@{/images/recipe/} + recipe_ + ${recipe.id} + .jpeg">
+                        <!--boton de editar receta-->
+                        <a th:href="@{${'/recipes/' + recipe.id}}">
+                            <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="container-lg text-center pt-4 pb-2">
             <h2 class="text-info" th:text="#{profile.user.recipes}">MIS RECETAS</h2>
